--- a/webpage/package.json
+++ b/webpage/package.json
@@ -1,17 +1,17 @@
 {
-    "name": "PickCoins",
+    "name": "pick-coins",
     "version": "1.0.0",
     "description": "",
     "main": "./modules/script.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start:build": "tsc -w",
-        "start": "concurrently npm:start:*"
+        "build": "concurrently npm:start:build"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "dependencies": {
+    "license": "MIT",
+    "devDependencies": {
         "concurrently": "^5.3.0"
     }
 }
