--- a/docs/package.json
+++ b/docs/package.json
@@ -5,13 +5,12 @@
     "main": "./modules/script.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start:build": "tsc -w",
-        "build": "concurrently npm:start:build"
+        "start:build": "tsc -w"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "devDependencies": {
-        "concurrently": "^5.3.0"
+        "typescript": "^4.4.4"
     }
 }
