--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
     "name": "pick-coins",
     "version": "1.0.0",
     "description": "",
-    "main": "./modules/script.js",
+    "main": "./js/main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start:build": "tsc -w"
+        "dev": "tsc -w"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "devDependencies": {
-        "typescript": "^4.4.4"
+        "typescript": "^5.1.6"
     }
 }
